@@ -3,6 +3,7 @@ v0.3.3 ()
 	* Tries to find calcerb.rb next to the executable.
 	* Started cleaning imports ...
   Bugs fixed
+	* Fixed a ton of problems related to exported resources and relations.
 
 v0.3.2 (2012/12/13)
   The license has been changed to BSD3.
